# gemini-agent

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
src/: agent.py  utils.py
